--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -25,36 +25,39 @@
    "source": [
     "![](visuals/1.png)\n",
     "\n",
-    "This first plot show the number of movies per budget, profitability, movie box office revenue and per decade. \n",
+    "This first plot shows the number of movies per budget, profitability, box office revenue, and decade.\n",
     "\n",
-    "Starting with the budget, we can see on the Histogram of Budgets that there exists a lot of different budget to produce a movie, and that most movies have a low budget. Indeed we can see that when the budget of the movie increase, the number of movies produce decrease, which shoe cleary that there is not a lot of movies with a high budget of production.\n",
+    "Starting with the budget, we can see in the Histogram of Budgets that there are many different budgets for producing a movie, with most movies having a low budget. Indeed, as the budget of a movie increases, the number of movies produced decreases, clearly showing that there are not many movies with a high production budget.\n",
     "\n",
-    "Regarding the profitability, We can see on the Histogram of Profitability that, as the profitability of the movies increase, the number of movies decrease. Which show clearly that not all movies are profitable and that it is only a minority of movies that are highly profitable.\n",
+    "Regarding profitability, we can see in the Histogram of Profitability that as the profitability of movies increases, the number of movies decreases. This clearly shows that not all movies are profitable, and only a minority of movies are highly profitable.\n",
     "\n",
-    "When we look at the Histogram of Revenue, We can see that only a minority of movies have a big box office revenue. Indeed we can see that as the box office revenue increase the number of movies decrease, which show that a lot of movies have a low box office revenue and only a few of them have a big one.\n",
+    "When we look at the Histogram of Revenue, we see that only a minority of movies achieve high box office revenue. As box office revenue increases, the number of movies decreases, indicating that many movies have low box office revenue and only a few achieve significant earnings.\n",
     "\n",
-    "Finally, we can see on the fourth plot the number of released movies per decade. On this plot, we can see the variety of the datas, indeed the data contained movies released before 1920 up to after 2010. We can also see that the number of released movie as increase a lot from 1920 until the year 2000 and as then suddently drop in 2010, this is because the data stop after the year 2010. The datas between 2010 and 2020 are not available which explain this drop. This mean not that less movies are produced now. If we take apart the last decade where datas are measing, we can see that the number of movies as only be increase over the decades.\n",
+    "Finally, in the fourth plot, we see the number of released movies per decade. This plot reveals a variety of data, encompassing movies released before 1920 up to those released after 2010. We observe that the number of released movies increased significantly from 1920 until 2000 and then suddenly dropped in 2010. This drop occurs because the data stops after 2010. The absence of data between 2010 and 2020 explains this decline; it does not indicate that fewer movies are being produced today. Excluding the last decade, where data is missing, we see that the number of movies has consistently increased over the decades.\n",
     "\n",
     "<!-- ![](visuals/2.png) -->\n",
     "\n",
     "![](visuals/3.png)\n",
     "\n",
-    "On the plot of the Movie Profitability over Time, we can see different feature, first the green dot line represent the limit of profitability, Indeed it is where the profitability equal 1 which mean that the movie box office revenue is exactly the same as the budget of the movie. Under this line, the movies have a lower revenue then the budget of the movie and above the line the revenue is bigger than the budget which means that the movie is profitable. \n",
+    "In the plot of Movie Profitability Over Time, we can observe several features. First, the green dotted line represents the profitability threshold. This line corresponds to a profitability value of 1, which means the movie's box office revenue is exactly equal to its budget. Below this line, movies have a lower revenue than their budget, while above the line, the revenue exceeds the budget, indicating that the movie is profitable.\n",
     "\n",
-    "The blue dot represent the median profitability for each year, every dot are above the green dot line which mean that for every year over 50% of movies are profitable. \n",
+    "The blue dots represent the median profitability for each year. All the dots are above the green dotted line, which means that for every year, over 50% of movies are profitable.\n",
     "\n",
-    "The red line represent the linear regression done on every median dot, and around the line we can see the confidence interval of this linear regression. We can see that the profitability of movies tend to decrease over the decades, this mean that, for movies produce now, it is harder to have a good profitability than a couple of decades ago.\n",
+    "The red line represents the linear regression performed on the median dots, and the shaded area around the line indicates the confidence interval of this linear regression. We can see that the profitability of movies tends to decrease over the decades. This suggests that movies produced in recent years face greater difficulty achieving high profitability compared to those made several decades ago.\n",
     "\n",
-    "The histogram above the plot show the distribution of the samples taken to do this plot. We can see that it is almost constant which mean that the samples are well distributed for every years. \n",
+    "The histogram above the plot shows the distribution of the samples used to create this plot. It appears almost constant, indicating that the samples are evenly distributed across the years.\n",
     "\n",
-    "Finally the histogram on the right side of the plot show the distribution of profitability. We can see that there is not a lot of movies that are highly profitable and that most of the movies tend to have a revenue between 1 to 3 time the budget of the movies.\n",
+    "Finally, the histogram on the right side of the plot shows the distribution of profitability. It reveals that only a few movies are highly profitable, while most movies tend to have a revenue between 1 to 3 times their budget.\n",
     "\n",
     "![](visuals/4.png)\n",
     "\n",
     "<!-- ![](visuals/5.png) -->\n",
     "\n",
-    "On the histogram above, we can see the number of failed and successful movies by decades. We can see on the histogram that the number of successful and failed movies increase every decades, this is because, as seen before, over the year more movies were released which increased the number of successful and failed movies. This do not means that movies are more or less successful now then they were before and what is important to look at is the gap between the successful and failed movies. By comparating this gap, we can see that for every decades there are more sucessfull movies then failed ones. We can also see that up to the year 1970, there seems to me more than two time more successful movies then failed one. this gap decrease starting from the year 1980. Around 1990, there is pic of failed movies, and it come close to the number of successful movies but it is still not bigger. For the past two deacdes it seems that there is one third of failed movies for two third of successful movies.\n",
-    "\n"
+    "In the histogram above, we can see the number of failed and successful movies by decade. The histogram shows that the number of successful and failed movies increases every decade. This is because, as observed earlier, more movies were released over the years, leading to an increase in both successful and failed movies. This does not mean that movies are more or less successful now than they were before. The important aspect to consider is the gap between the number of successful and failed movies.\n",
+    "\n",
+    "By comparing this gap, we can observe that for every decade, there are more successful movies than failed ones. Notably, up to the year 1970, there appear to be more than twice as many successful movies as failed ones. This gap begins to decrease starting from the 1980s. Around 1990, there is a peak in the number of failed movies, bringing it closer to the number of successful movies, though it does not surpass it.\n",
+    "\n",
+    "For the past two decades, it seems that the proportion of failed movies is approximately one-third, while successful movies make up the remaining two-thirds.\n"
    ]
   },
   {
@@ -74,11 +77,23 @@
    "source": [
     "![](visuals/6.png)\n",
     "\n",
+    "In the two plots above, we can see the median movie budget over decades in one plot and per year over the last 20 years in the other.\n",
+    "\n",
+    "Over the decades, we observe that the median budget increases. This indicates that, over time, movies are more likely to have higher production budgets. This can be explained, firstly, by the advancement of technology, which has become more sophisticated and expensive, and movies increasingly rely on these technologies. Additionally, movies have become more successful, allowing studios to invest in higher budgets with greater confidence in their profitability. Furthermore, the last century was marked by wars that brought widespread poverty, leaving people with less disposable income to spend on entertainment. As the wars ended and poverty decreased, audiences had more money to spend on movies, generating higher profits for the film industry and enabling higher production budgets.\n",
+    "\n",
+    "Over the last 20 years, the median movie budget appears to have slightly decreased but remains mostly constant. This is likely due to advancements in technology, which have become more integrated into daily life. Modern tools can now be produced at lower costs than before, and technological advancements have also enabled faster and more efficient movie production, reducing the budget required to produce a film.\n",
+    "\n",
     "<!-- ![](visuals/7.png) -->\n",
     "\n",
     "![](visuals/8.png)\n",
     "\n",
-    "![](visuals/9.png)\n",
+    "In the two plots above, we can see the median success rate of movies as a function of the production budget. In the first plot, this comparison is shown for the entire dataset of movies, while in the right plot, we see the evolution of this comparison over the last 20 years.\n",
+    "\n",
+    "In both plots, we observe a trend of a higher success rate as the budget increases. This trend is even more pronounced over the last 20 years, where the line rises more steeply compared to previous decades. This trend can be explained in several ways.\n",
+    "\n",
+    "First, movies with higher budgets are more likely to feature famous actors and specialized equipment, leading to a better-quality final product. Additionally, famous actors can attract audiences who are eager to see their favorite actor or actress on screen.\n",
+    "\n",
+    "The production franchise also plays a role. Well-known franchises are more likely to have higher budgets due to their past successes and their ability to rely on a loyal audience that is more inclined to watch subsequent movies in the series.\n",
     "\n"
    ]
   },
