commit final pour Mentor aller c'est ciao

--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -219,18 +219,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "085f66c0-6994-4e99-a569-5366e2e2b36a",
+   "id": "7a6177b7",
    "metadata": {},
    "source": [
-    "There are more than actual useful results :-)"
+    "On the three plots below, we decided to concentrate on six main genres to inspect on three different aspects : The mean budget, the mean runtime and the sample size. Finally, each of them is computed as the mean profitability compared to the release month, therefore the overall shape of the bubbles will follow the same pattern through the three of them. Let's analyse them now !\n",
+    "\n",
+    "![](visuals/29_1.png)\n",
+    "\n",
+    "On this first plot, the mean budget is analysed. We immediatly see a genre that, in terms of budget, stands out from the others. It is the superhero one, which is not that much of a surprise as these kind of films are made with a lot of special effects that higher the overall budget rapidly. But those are not necessarily the most profitable movies. Indeed, depending on the month of release, the most profitable genre can vary a lot. This depends of course on the mood of the season. During winter, we are more inclined to watch romantic or Christmas movies. Therefore, it is not a surprise for the war movies to not be the most profitable genre.\n",
+    "\n",
+    "![](visuals/29_2.png)\n",
+    "\n",
+    "The next plot informs about the different runtime depending on the genre. This time, the genre that seems like having the biggest runtime are the the war movies. Again, it is not particularly a surprise, as these productions usually include a big historical part that can, depending on the war theme, take quite a long time. But overall, the profitability of depending the genre follows the same pattern as in the previous plot as said before.\n",
+    "\n",
+    "![](visuals/29_3.png)\n",
+    "\n",
+    "And finally, we analyze the sample size that is available in the dataset. The genre which is represented the most is the action one. And as the plot shows it, their representation, compared to the other genres, is much bigger. It is not a big suprise as those kind of film tend to be more popular to a larger range of people. But, again, this does not imply that they are the most profitable ones. The action films are never in the top actually, whatever the month. This can be explained because in the huge number of action movies that are made, it would be almost impossible for all of them to be profitable. On the contrary, they are more keen to be pulled down by the many bad ones that exist !"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bd0ecb4",
+   "cell_type": "markdown",
+   "id": "2d5fe6d1",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
