--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -13,7 +13,7 @@
    "id": "1345b25a-1552-4341-8a87-fac38dd7ed2f",
    "metadata": {},
    "source": [
-    "## Previous analysis of the aspects we want to compare"
+    "## Previous analysis of the aspects that are compared"
    ]
   },
   {
