result war movies

--- a/4_results.ipynb
+++ b/4_results.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55db9ad7-221b-453d-8bec-e60cf3b114fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "49c2b3c3-c7ce-47f8-8468-7e297829fe1a",
    "metadata": {},
@@ -163,9 +173,142 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ce4f88d-10f4-4d60-9665-a84847ca34e2",
+   "id": "2b6ec0bf-d6af-4983-a6f8-08f59b6cdd9a",
    "metadata": {},
    "source": [
+    "## Case study: war-related movies\n",
+    "In we research of dominant factors of movies commercial success over time we were interested to see the relationship of real worlds events and cultural movments with the cinema industry. \n",
+    "To explore this we decided to analysis a subset of the CMU dataset composed of movies that have war-related genres and are from the USA. We also filtered out the movies for which we didn't have the box office revenue and release year data and ended up with 391 war-related movies.\n",
+    "\n",
+    "In the following figure we plotted the evolution of the number of war-related movies and all movie release over time.  \n",
+    "\n",
+    "![](visuals/war_movies_over_time.png)\n",
+    "\n",
+    "As we can see, the number of war-related movies' release for each year fluctuates a lot so we decided to apply a rolling average with a 3-year window in order to observe long-term trend. We further annotated the plot with the major conflicts in which the USA was involved in the last century.\n",
+    "\n",
+    "![](visuals/war_movies_over_time_smoothed.png)\n",
+    "\n",
+    "From this it seems that conflicts such as WWII, the Vietnam War or the Cold War did induce some peak of war-related movies. Furthermore when plotting the proportion of war-related movies over the years we see that in the 1940's these movies accounted for a big porcentage of the movies' release culmunating to 50% in 1943.   \n",
+    "\n",
+    "![](visuals/war_movies_proportion_over_time.png)\n",
+    "\n",
+    "For further analysis we calculated the Pearson correlation between the number of war-related movies and all movies' release per year:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "de62bc7e-489a-4ea8-b3fa-cd34b7fd05ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation: 0.617434365120252, P-value: 6.479400208508737e-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load variables from the file\n",
+    "with open('results/saved_variables.pkl', 'rb') as file:\n",
+    "    data = pickle.load(file)\n",
+    "\n",
+    "# Access the variables\n",
+    "corr = data['corr']\n",
+    "p_value = data['p_value']\n",
+    "\n",
+    "print(f\"Correlation: {corr}, P-value: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d72d3dfb-7f83-4a41-a49a-e90fc64ec49a",
+   "metadata": {},
+   "source": [
+    "We have a correlation coefficient of 0.62 which indicates moderate positive linear relationship between the number of war movies per year and the total number of movies per year. The P-value is nearly 0 which suggests the observed correlation is highly statistically significant. \n",
+    "This implies that the variation in war-related movie's releases is greatly related to the variation that exists for all movie's releases, ie the general increase in movies production is a driving factor of the war movies production.\n",
+    "\n",
+    "To complement this result we also performed an OSL regression.\n",
+    "\n",
+    "![](visuals/OSL_war_movies.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "694fa30a-8d29-467d-8805-03e754ae6e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.381\n",
+      "Model:                            OLS   Adj. R-squared:                  0.373\n",
+      "Method:                 Least Squares   F-statistic:                     49.29\n",
+      "Date:                Fri, 20 Dec 2024   Prob (F-statistic):           6.48e-10\n",
+      "Time:                        19:02:30   Log-Likelihood:                -200.13\n",
+      "No. Observations:                  82   AIC:                             404.3\n",
+      "Df Residuals:                      80   BIC:                             409.1\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          2.2988      0.469      4.899      0.000       1.365       3.233\n",
+      "0              0.0250      0.004      7.021      0.000       0.018       0.032\n",
+      "==============================================================================\n",
+      "Omnibus:                       27.409   Durbin-Watson:                   1.156\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               44.457\n",
+      "Skew:                           1.358   Prob(JB):                     2.22e-10\n",
+      "Kurtosis:                       5.375   Cond. No.                         199.\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load and print the OSL regression model summary\n",
+    "with open('results/OSL_summary.txt', 'r') as file:\n",
+    "    summary = file.read()\n",
+    "\n",
+    "print(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0bba9c9-f74b-4103-91b3-6a3896b23a71",
+   "metadata": {},
+   "source": [
+    "We have a R-squared of 0.387 wich means that 38.7% of the variance of the number of war-related movies' releases per year is explained by the total number of movies' releases per year, this suggests that other factors play a role. From the residuals plot above we can see that the relationship between the number of war movies per year and the total number of movies per year is not well explained by this linear model and confirms that some other factors, such as actual wars, influence the war-related movies' releases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72c15e8f-7e30-4947-ad0e-d671376a86e2",
+   "metadata": {},
+   "source": [
+    "We then explored the average box office revenue of war-related movies vs all movies and, as earlier, we smoothed the data with a 3-year window rolling average. We also computed the proportion \n",
+    "\n",
+    "![](visuals/war_movies_BO.png)\n",
+    "\n",
+    "We observe that altought it fluctuates a lot we have a big peak during the Vietnam War/Cold War and that over the last 30 years the genre performs better on average than the rest of the industry."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da37b394-f936-4b41-bbdd-0e1c4d835376",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "\n",
+    "\n",
     "## Shortcomings of our analysis"
    ]
   },
@@ -188,9 +331,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
