--- a/3_results.ipynb
+++ b/3_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "55db9ad7-221b-453d-8bec-e60cf3b114fb",
    "metadata": {},
    "outputs": [],
@@ -218,6 +218,8 @@
    "metadata": {},
    "source": [
     "## Case study: war-related movies\n",
+    "**War movies**\n",
+    "\n",
     "In we research of dominant factors of movies commercial success over time we were interested to see the relationship of real worlds events and cultural movments with the cinema industry. \n",
     "To explore this we decided to analysis a subset of the CMU dataset composed of movies that have war-related genres and are from the USA. We also filtered out the movies for which we didn't have the box office revenue and release year data and ended up with 391 war-related movies.\n",
     "\n",
@@ -233,12 +235,14 @@
     "\n",
     "![](visuals/war_movies_proportion_over_time.png)\n",
     "\n",
+    "\n",
+    "\n",
     "For further analysis we calculated the Pearson correlation between the number of war-related movies and all movies' release per year:  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "de62bc7e-489a-4ea8-b3fa-cd34b7fd05ea",
    "metadata": {},
    "outputs": [
@@ -252,7 +256,7 @@
    ],
    "source": [
     "# Load variables from the file\n",
-    "with open('results/saved_variables.pkl', 'rb') as file:\n",
+    "with open('results/pearson_war.pkl', 'rb') as file:\n",
     "    data = pickle.load(file)\n",
     "\n",
     "# Access the variables\n",
@@ -272,12 +276,13 @@
     "\n",
     "To complement this result we also performed an OSL regression.\n",
     "\n",
-    "![](visuals/OSL_war_movies.png)\n"
+    "![](visuals/OSL_war_movies.png)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "694fa30a-8d29-467d-8805-03e754ae6e9d",
    "metadata": {},
    "outputs": [
@@ -291,7 +296,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.373\n",
       "Method:                 Least Squares   F-statistic:                     49.29\n",
       "Date:                Fri, 20 Dec 2024   Prob (F-statistic):           6.48e-10\n",
-      "Time:                        19:02:30   Log-Likelihood:                -200.13\n",
+      "Time:                        21:01:51   Log-Likelihood:                -200.13\n",
       "No. Observations:                  82   AIC:                             404.3\n",
       "Df Residuals:                      80   BIC:                             409.1\n",
       "Df Model:                           1                                         \n",
@@ -338,7 +343,92 @@
     "\n",
     "![](visuals/war_movies_BO.png)\n",
     "\n",
+    "\n",
     "We observe that altought it fluctuates a lot we have a big peak during the Vietnam War/Cold War and that over the last 30 years the genre performs better on average than the rest of the industry."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca138e5-1eb0-4aff-aaca-5cce667fd065",
+   "metadata": {},
+   "source": [
+    "**Superheros movies**\n",
+    "\n",
+    "We then wondered if the rising popularity of superheros movies had an impact on the war-related movies. Firstly, we check if some movies had genres both superheros and war-related and it turned out that only Iron Man (2008) was concerned and we decided to put it in the superhero category.\n",
+    "\n",
+    "We checked the proportion of superheros movies vs war movies to see if there was some cannibalization of the market but we found no evidence of this. Since there is little to no superhero movies before 1980 we only show the results after 1980.\n",
+    "\n",
+    "![](visuals/superheros_war.png)\n",
+    "\n",
+    "This was also showned by the weak Pearson correlation and high p-value which suggest that the rise of superhero movies does not explain any decline (or change) in the trend of war movies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f87a6904-25a1-4503-9759-98492aa6b3e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation: -0.147663492254242, P-value: 0.5013431158983961\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load variables from the file\n",
+    "with open('results/pearson_superhero.pkl', 'rb') as file:\n",
+    "    data = pickle.load(file)\n",
+    "\n",
+    "# Access the variables\n",
+    "corr = data['corr']\n",
+    "p_value = data['p_value']\n",
+    "\n",
+    "print(f\"Correlation: {corr}, P-value: {p_value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d88b88c3-d364-41e1-baba-69bf014d2815",
+   "metadata": {},
+   "source": [
+    "We then explored the average box office revenue of superheros movies compared to war ones (again smoothed on a 3 years window).\n",
+    "\n",
+    "![](visuals/superheros_war_BO.png)\n",
+    "\n",
+    "We here see that the trend seems to be more advantagous for the superhero movies than the war ones.\n",
+    "\n",
+    "To confirm this we performed a t-test which suggests a potential trend toward superhero movies earning higher average revenues than war movies between 1980 and 2010, but the result is not statistically significant (p = 0.0668).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "52fee4b6-c371-4df5-a94d-a206d8d53e15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-Statistic (1980–2010): 1.88\n",
+      "P-Value: 0.0668\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load variables from the file\n",
+    "with open('results/t_superhero.pkl', 'rb') as file:\n",
+    "    data = pickle.load(file)\n",
+    "\n",
+    "# Access the variables\n",
+    "t_stat = data['t_stat']\n",
+    "p_value = data['p_value']\n",
+    "\n",
+    "print(f\"T-Statistic (1980–2010): {t_stat:.2f}\")\n",
+    "print(f\"P-Value: {p_value:.4f}\")"
    ]
   },
   {
