fixed plot names

--- a/3_results.ipynb
+++ b/3_results.ipynb
@@ -35,6 +35,7 @@
    "source": [
     "![](visuals/nb_movie_budget_profit_BoxOffice_decade.png)\n",
     "\n",
+    "\n",
     "This first plot shows the number of movies per budget, profitability, box office revenue, and decade.\n",
     "\n",
     "Starting with the budget, we can see in the Histogram of Budgets that there are many different budgets for producing a movie, with most movies having a low budget. Indeed, as the budget of a movie increases, the number of movies produced decreases, clearly showing that there are not many movies with a high production budget.\n",
@@ -70,9 +71,7 @@
   {
    "cell_type": "markdown",
    "id": "5f62ee94-d67a-451c-a880-0a21b8a9f5f8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Hypothesis 1 : higher budget movies are a higher risk and are less likely to be profitable."
    ]
@@ -83,6 +82,7 @@
    "metadata": {},
    "source": [
     "![](visuals/median_budget_by_dec_year.png)\n",
+    "\n",
     "\n",
     "In the two plots above, we can see the median movie budget over decades in one plot and per year over the last 20 years in the other.\n",
     "\n",
@@ -119,6 +119,7 @@
    "source": [
     "![](visuals/nb_movie_per_runtime.png)\n",
     "\n",
+    "\n",
     "Plot of number of movies within a certain range of runtimes. There’s a small group of much shorter films that are in the 0-30min range, which come mostly from the earlier years where technological and financial considerations limited runtimes of movies, and some that stretch well over two hours, but they’re relatively rare compared to the cluster in the middle. This suggests that “feature-length” typically centers around that hour-and-a-half sweet spot, with fewer productions choosing to deviate too far from it.\n",
     "\n",
     "![](visuals/runtime_distribution_per_decade.png)\n",
@@ -148,6 +149,7 @@
    "metadata": {},
    "source": [
     "![](visuals/profit_per_day.png)\n",
+    "\n",
     "\n",
     "On this first plot of the third hypothesis, we compare the profitability of the films depending on their release day. The purpose there was to check if, for example, the pay day had an impact on the profit each movie make. It is an acceptable hypothesis to think that people are more inclined to go to the movie theater as the receive their pay than if it is the end of the month. But as we can observe on the plot, the result do not change that much from one day to another. Therefore, we can conclude that the day of release does not really have an impact on the profitability.\n",
     "\n",
@@ -184,6 +186,7 @@
    "source": [
     "![](visuals/profit_representation_by_genre.png)\n",
     "\n",
+    "\n",
     "These plots show how certain genres have changed in both profitability and their share of the market over time. For example, “Family”, \"Action\", and “Romantic” films generally became less profitable even though their representation increased as decades passed. “War” sees a downfall of both representation and profitability, perhaps because of the world's traumatising experience with war in the last century.  “LGBT” films, on the other hand, saw both their representation and profitability tick upwards. “Superhero” genres don’t have as clear patterns, but they also show shifts. Overall, it suggests that audience tastes and industry focus move over time, giving different genres periods of growth or decline.\n",
     "\n",
     "![](visuals/profit_represention_of_genre_last_20_years.png)\n",
@@ -199,6 +202,8 @@
     "These plots show how certain themes have evolved in both profitability and how often they appear. For “Friendship,” profitability hasn’t changed much, but these films have grown more common. Themes like “Resilience” and “Identity” started off profitable but have trended downward over time, even though their representation shifted only a bit. “Deception” and “Love” themes saw their profitability fall as their prevalence decreased. “Family” films have stayed pretty stable on both fronts. Overall, it suggests that audience tastes and industry strategies around these themes have shifted, affecting both the financial returns and how frequently filmmakers choose them.\n",
     "\n",
     "![](visuals/profit_representation_by_theme_20_years.png)\n",
+    "\n",
+    "\n",
     "\n",
     "In the past two decades, most themes have gradually lost some profitability and become a bit less common. “Friendship” and “Deception,” for example, both saw their returns and share shrink over time. “Love” also followed this downward path in profitability. “Resilience” and “Identity” don’t show strong trends, but they aren’t notably improving either. The one standout is “Family,” which shows a mild upward trend in profitability and presence, suggesting that as other themes waned, audiences and filmmakers turned more toward family-centric stories.\n"
    ]
@@ -296,7 +301,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.373\n",
       "Method:                 Least Squares   F-statistic:                     49.29\n",
       "Date:                Fri, 20 Dec 2024   Prob (F-statistic):           6.48e-10\n",
-      "Time:                        21:01:51   Log-Likelihood:                -200.13\n",
+      "Time:                        21:29:51   Log-Likelihood:                -200.13\n",
       "No. Observations:                  82   AIC:                             404.3\n",
       "Df Residuals:                      80   BIC:                             409.1\n",
       "Df Model:                           1                                         \n",
@@ -429,6 +434,23 @@
     "\n",
     "print(f\"T-Statistic (1980–2010): {t_stat:.2f}\")\n",
     "print(f\"P-Value: {p_value:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc74d4b2-1469-44eb-8536-7694f13cb4d5",
+   "metadata": {},
+   "source": [
+    "**Themes analysis**\n",
+    "\n",
+    "Finally we dived into the top themes in war movies. First we visualized how they changed over time.\n",
+    "\n",
+    "![](visuals/war_themes.png)\n",
+    "\n",
+    "And then simply observed the difference in preponderating themes in both war and superheros movies.\n",
+    "\n",
+    "![](visuals/superheros_war_themes.png)\n",
+    "\n"
    ]
   },
   {
