--- a/3_results.ipynb
+++ b/3_results.ipynb
@@ -236,7 +236,7 @@
     "\n",
     "![](visuals/war_movies_over_time_smoothed.png)\n",
     "\n",
-    "From this it seems that conflicts such as WWII, the Vietnam War or the Cold War did induce some peak of war-related movies. Furthermore when plotting the proportion of war-related movies over the years we see that in the 1940's these movies accounted for a big porcentage of the movies' release culmunating to 50% in 1943.   \n",
+    "From this it seems that conflicts such as WWII, the Vietnam War or the Cold War did induce some peak of war-related movies. Furthermore when plotting the proportion of war-related movies over the years we see that in the 1940's these movies accounted for a big percentage of the movies' release culmunating to 50% in 1943.   \n",
     "\n",
     "![](visuals/war_movies_proportion_over_time.png)\n",
     "\n",
@@ -474,6 +474,7 @@
     "![](visuals/29_1.png)\n",
     "\n",
     "\n",
+    "\n",
     "On this first plot, the mean budget is analysed. We immediatly see a genre that, in terms of budget, stands out from the others. It is the superhero one, which is not that much of a surprise as these kind of films are made with a lot of special effects that higher the overall budget rapidly. But those are not necessarily the most profitable movies. Indeed, depending on the month of release, the most profitable genre can vary a lot. This depends of course on the mood of the season. During winter, we are more inclined to watch romantic or Christmas movies. Therefore, it is not a surprise for the war movies to not be the most profitable genre.\n",
     "\n",
     "![](visuals/29_2.png)\n",
@@ -484,6 +485,14 @@
     "\n",
     "And finally, we analyze the sample size that is available in the dataset. The genre which is represented the most is the action one. And as the plot shows it, their representation, compared to the other genres, is much bigger. It is not a big suprise as those kind of film tend to be more popular to a larger range of people. But, again, this does not imply that they are the most profitable ones. The action films are never in the top actually, whatever the month. This can be explained because in the huge number of action movies that are made, it would be almost impossible for all of them to be profitable. On the contrary, they are more keen to be pulled down by the many bad ones that exist !"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d7b7a3-171a-49da-adaf-b1e824fe6ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
